Rename Recognizer class as Parser

--- a/recAssign/Makefile
+++ b/recAssign/Makefile
@@ -27,12 +27,12 @@ test4: recognizer
 test5: recognizer
 	-./recognizer test5.min
 
-TestRec.class: TestRec.java Lexeme.class Recognizer.class LexException.class SyntaxException.class
+TestRec.class: TestRec.java Lexeme.class Parser.class LexException.class SyntaxException.class
 	$(COMP) $(OPTS) TestRec.java
 
-Recognizer.class: Recognizer.java Type.class Group.class Lexer.class Lexeme.class \
+Parser.class: Parser.java Type.class Group.class Lexer.class Lexeme.class \
 		 LexException.class SyntaxException.class
-	$(COMP) $(OPTS) Recognizer.java
+	$(COMP) $(OPTS) Parser.java
 
 Lexer.class: Lexer.java Lexeme.class Type.class LexException.class
 	$(COMP) $(OPTS) Lexer.java
